--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "test": "jest",
-    "deploy": "nuxt generate && ./node_modules/gh-pages/bin/gh-pages.js -d dist"
+    "deploy": "DEPLOY_ENV=GH_PAGES nuxt generate && ./node_modules/gh-pages/bin/gh-pages.js -d dist"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
